fixed styling on mobile

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -6,6 +6,8 @@ $resume-background-color: #fff;
 $resume-main-headline-color: $dark-grey;
 $resume-sec-headline-color: #accabd;
 
+$mobile-width: 800px;
+
 // home colors
 $home-background-color: #232e33;
 $home-primary: #fff;
